--- a/.github/workflows/update-pr.yml
+++ b/.github/workflows/update-pr.yml
@@ -12,7 +12,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       
-      
       - name: Create Temporary Branch
         run: |
           TIMESTAMP=$(date +'%Y%m%d%H%M%S')
@@ -20,10 +19,10 @@ jobs:
           git checkout -b $TEMP_BRANCH
       
       - name: Fetch Upstream Changes
-        run: git fetch source master
+        run: git fetch upstream master  # Use "upstream" instead of "source"
       
       - name: Merge Upstream Changes
-        run: git merge source/master
+        run: git merge upstream/master  # Use "upstream" instead of "source/master"
       
       - name: Push Changes
         run: git push origin $TEMP_BRANCH
