--- a/.github/workflows/update-pr.yml
+++ b/.github/workflows/update-pr.yml
@@ -1,38 +1,28 @@
-name: Update and Create PR
-  
+name: Create Pull Request on Push to Temp Branch
+
 on:
   push:
     branches:
-      - master
-  
+      - update-from-upstream  # Change to your temporary branch name
+
 jobs:
-  update-and-pr:
+  create-pr:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
       
-      - name: Create Temporary Branch
+      - name: Set up Git
         run: |
-          TIMESTAMP=$(date +'%Y%m%d%H%M%S')
-          TEMP_BRANCH="temp-update-$TIMESTAMP"
-          git checkout -b $TEMP_BRANCH
-      
-      - name: Fetch Upstream Changes
-        run: git fetch upstream master  # Use "upstream" instead of "source"
-      
-      - name: Merge Upstream Changes
-        run: git merge upstream/master  # Use "upstream" instead of "source/master"
-      
-      - name: Push Changes
-        run: git push origin $TEMP_BRANCH
+          git config user.name "Your Name"
+          git config user.email "your@email.com"
       
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
+        uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           base: master
-          head: $TEMP_BRANCH
-          commit-message: "Automated PR: Update from upstream"
-          title: "Update from Upstream"
-          body: "This pull request is automatically generated to reflect the latest changes from the upstream repository."
+          head: update-from-upstream  # Change to your temporary branch name
+          commit-message: "Automated PR: Update from temporary branch"
+          title: "Update from Temporary Branch"
+          body: "This pull request is automatically generated when changes are pushed to the temporary branch."
