--- a/.github/workflows/update-pr.yml
+++ b/.github/workflows/update-pr.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       
       # - name: Set up Git
       #   run: |
@@ -18,11 +18,11 @@ jobs:
       #     git config user.email "your@email.com"
       
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
+        uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           base: master
-          head: update-from-upstream  # Change to your temporary branch name
+          branch: update-from-upstream  # Change to your temporary branch name
           commit-message: "Automated PR: Update from temporary branch"
           title: "Update from Temporary Branch"
           body: "This pull request is automatically generated when changes are pushed to the temporary branch."
