--- a/.github/workflows/update-pr.yml
+++ b/.github/workflows/update-pr.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.AUTH_TOKEN }}
           base: master
           branch: update-from-upstream  # Change to your temporary branch name
           commit-message: "Automated PR: Update from temporary branch"
