--- a/.github/workflows/update-pr.yml
+++ b/.github/workflows/update-pr.yml
@@ -68,8 +68,8 @@ jobs:
       # - name: Make changes to pull request
       #   run: date +%s > report.txt
 
-      # - name: Push Changes
-      #   run: git push origin update-from-upstream
+      - name: Pull Changes
+        run: git pull origin update-from-upstream
 
       - name: Create Pull Request
         id: cpr
