--- a/.github/workflows/update-pr.yml
+++ b/.github/workflows/update-pr.yml
@@ -69,7 +69,7 @@ jobs:
       #   run: date +%s > report.txt
 
       - name: Pull Changes
-        run: git pull https://github.com/karanshukla430/Todo_mern.git
+        run: git pull origin update-from-upstream
 
       - name: Create Pull Request
         id: cpr
