--- a/.github/workflows/update-pr.yml
+++ b/.github/workflows/update-pr.yml
@@ -72,7 +72,7 @@ jobs:
         run: git remote add source https://github.com/karanshukla430/Todo_mern.git
         
       - name: Pull Changes
-        run: git pull source master
+        run: git pull origin update-from-upstream
 
       - name: Create Pull Request
         id: cpr
