--- a/.github/workflows/update-pr.yml
+++ b/.github/workflows/update-pr.yml
@@ -68,8 +68,8 @@ jobs:
       # - name: Make changes to pull request
       #   run: date +%s > report.txt
 
-      - name: Remote Changes
-        run: git remote add source https://github.com/karanshukla430/Todo_mern.git
+      # - name: Remote Changes
+      #   run: git remote add source https://github.com/karanshukla430/Todo_mern.git
         
       - name: Pull Changes
         run: git pull origin update-from-upstream
